<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/history"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFE500"
            android:textColor="@color/black"
            android:text="@string/history_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    <ImageView
        android:id="@+id/mainPhoto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/antiqueName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainPhoto" />

        <TextView
            android:id="@+id/description"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/antiqueName" />

        <Button
            android:id="@+id/googleMap"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#22C629"

            android:text="@string/googlemaptxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history" />


        <Button
            android:id="@+id/galleryButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gallery_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleMap" />


    <RelativeLayout
        android:id="@+id/layout_gchat_chatbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton">


        <EditText
            android:id="@+id/sendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/buttonSend"
            android:background="@android:color/transparent"
            android:hint="@string/write_opinion"
            android:inputType="text"
            android:maxLines="6"
            tools:ignore="Autofill"
            tools:layout_editor_absoluteX="-7dp"
            tools:layout_editor_absoluteY="730dp" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/gray"
            android:text="@string/send"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="319dp"
            tools:layout_editor_absoluteY="730dp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/uploadAvatar"
        android:layout_width="66dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:scaleType="fitXY"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton"
        tools:srcCompat="@tools:sample/avatars" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="96dp"
        android:progressTint="#FFEB3B"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/uploadAvatar"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton" />

    <Button
        android:id="@+id/planButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_to_plan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton" />

</androidx.constraintlayout.widget.ConstraintLayout>